--- a/assets/texts/fr/Changelog/0.1.md
+++ b/assets/texts/fr/Changelog/0.1.md
@@ -1,4 +1,4 @@
-* **Featured:** 
-* **New:** 
-* **Fixed:** 
-* **Internal:** 
+* **Mis en avant:** 
+* **Nouveau:** 
+* **Corrigé:** 
+* **Interne:** 
