feat: localize options page
* add English translation as template
* add German translation

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -49,7 +49,7 @@
     "description": "The message, which appears, when settings are pre-defined (as managed options) by administrators."
   },
   "optionIsDisabledBecauseManaged": {
-    "message": "Diese option ist deaktiviert, weil sie von deinem Systemadministrator festgelegt wurde.",
+    "message": "Diese Option ist deaktiviert, weil sie von deinem Systemadministrator festgelegt wurde.",
     "description": "The title (tooltip) shown, when hovering over a disabled, managed option."
   },
   "optionLearnMore": {
@@ -59,6 +59,157 @@
   "optionsResetButton": {
     "message": "Setze alle Einstellungen auf Standardwerte zurück",
     "description": "The button to delete all current settings and load the defaults, shown in the add-on settings."
+  },
+
+  "titleUnicodeAutocorrection": {
+    "message": "Unicode-Autokorrektur",
+    "description": "A title in the add-on settings."
+  },
+  "titleContextMenu": {
+    "message": "Kontextmenü",
+    "description": "A title in the add-on settings."
+  },
+
+  "optionHelperTextAutocorrection": {
+    "message": "Du kannst die automatischen Korrekturen, welche bei Eingabe von Text ausgeführt werden, hier konfigurieren.$BR$Alle Autokorreturen werden ausgeführt, sobald du das ersten nicht-passenden Zeichen, gefolgt von einer Zeichensequenz wie einem Leerzeichen (␣), schreibst. Drück die Rücktaste (⌫) um eine Autokorrektur rückgängig zu machen. Nur das Ersetzen der Anführungszeichen wird sofort ausgeführt.",
+    "description": "Description for the section titleUnicodeAutocorrection explaining how the autocorrection works.",
+    "placeholders": {
+      "br": {
+        "content": "$1",
+        "example": "<br>"
+      }
+    }
+  },
+  "optionHelperTextAutocorrectionEmoji": {
+    "message": "Um auch Emojis, inklusive $COLON$-Codes und Emoticons, automatisch zu korrigieren zu lassen, teste auch unser $LINK$ add-on.",
+    "description": "Description for the section titleUnicodeAutocorrection advertising the Awesome Emoji Picker add-on.",
+    "placeholders": {
+      "colon": {
+        "content": "$1",
+        "example": "<code>:colon:</code>"
+      },
+      "link": {
+        "content": "$2",
+        "example": "<a href=\"https://addons.mozilla.org/firefox/addon/awesome-emoji-picker/\">🤩&nbsp;Awesome Emoji Picker</a>"
+      }
+    }
+  },
+  "optionHelperTextAutocorrectionEmojiColonsCode": {
+    "message": ":Doppelpunkt:",
+    "description": "This is included in code-style in optionHelperTextAutocorrectionEmoji."
+  },
+  "optionHelperTextAutocorrectionEmojiLink": {
+    "message": "https://addons.mozilla.org/firefox/addon/awesome-emoji-picker/",
+    "description": "The target for the link provided in optionHelperTextAutocorrectionEmoji. Usually should not be modified and link to the AMO page of the Awesome Emoji Picker. It does redirect to the correct language automatically."
+  },
+  "optionHelperTextAutocorrectionEmojiLinkText": {
+    "message": "🤩\u00a0Awesome Emoji Picker",
+    "description": "The text for the link provided in optionHelperTextAutocorrectionEmoji. Should be the official name of the emoji picker add-on in your language."
+  },
+  "optionHelperTextContextMenu": {
+    "message": "Schreibe Text, markiere diesen und wähle die passende Option im Kontextmenü aus, um schnell das den Zeichenstil oder die Groß-/Kleinschreibung. Dies ist nützlich bei Websieten, welche es nicht erlauben die Schriftart oder die Textformattierung anzupassen.",
+    "description": "Description for the section titleContextMenu explaining how the autocorrection works."
+  },
+
+  "optionAutocorrectSymbols": {
+    "message": "Korrigiere Unicode-Symbole",
+    "description": "This is an option shown in the add-on settings."
+  },
+  "optionAutocorrectSymbolsDescr": {
+    "message": "Dies ersetzt bspw. $CODE_HYPHEN$ durch –, $CODE_ARROW$ durch ⟶ und $CODE_FRACTION$ mit ¼.",
+    "description": "This is an option shown in the add-on settings. It describes the optionAutocorrectSymbols setting.",
+    "placeholders": {
+      "code_hyphen": {
+        "content": "$1",
+        "example": "<code>--</code>"
+      },
+      "code_arrow": {
+        "content": "$2",
+        "example": "<code>--></code>"
+      },
+      "code_fraction": {
+        "content": "$3",
+        "example": "<code>1/4</code>"
+      }
+    }
+  },
+  "optionReplaceQuotes": {
+    "message": "Ersetze Anführungszeichen mit der typografischen Version",
+    "description": "This is an option shown in the add-on settings."
+  },
+  "optionReplaceQuotesDescr": {
+    "message": "Dies ersetzt \"diese ('Ersatz-')Anführungszeichen\" mit den sogenannten “smart quotes” bzw. deren “etwas ‘kleinerer’ Variante”.",
+    "description": "This is an option shown in the add-on settings. It describes the optionReplaceQuotes setting."
+  },
+  "optionConvertFractions": {
+    "message": "Konvertiere Brüche und andere mathematische Konstanten zu Unicode-Zeichen",
+    "description": "This is an option shown in the add-on settings."
+  },
+  "optionConvertFractionsDescr": {
+    "message": "Dies wird bspw. $CODE_NUMBER$ mit 1234¼ ersetzen.",
+    "description": "This is an option shown in the add-on settings. It describes the optionConvertFractions setting.",
+    "placeholders": {
+      "code_number": {
+        "content": "$1",
+        "example": "<code>1234.25</code>"
+      }
+    }
+  },
+
+  "optionMenuUnicodeFont": {
+    "message": "Zeige Uncode-Schriftarten-Optionen",
+    "description": "This is an option shown in the add-on settings."
+  },
+  "optionMenuUnicodeFontDescr": {
+    "message": "Wie bspw. ˢᵘᵖᵉʳˢᶜʳⁱᵖᵗ, ꜱᴍᴀʟʟ ᴄᴀᴘꜱ, 𝒮𝒸𝓇𝒾𝓅𝓉, 𝔉𝔯𝔞𝔨𝔱𝔲𝔯, 🅒🅘🅡🅒🅛🅔🅓 und 🆂🆀🆄🅰🆁🅴🅳.",
+    "description": "This is an option shown in the add-on settings. It describes the optionMenuUnicodeFont setting."
+  },
+  "optionMenuCasing": {
+    "message": "Zeige Optionen zur Änderung der Groß-/Kleinschreibung",
+    "description": "This is an option shown in the add-on settings."
+  },
+  "optionMenuCasingDescr": {
+    "message": "Zum Beispiel, “GROẞSCHREIBUNG”, “kleinschreibung”, “Schriebe Jedes Wort Groß” or “kEHRE gROẞSCHREIBUNG uM”.",
+    "description": "This is an option shown in the add-on settings. It describes the optionMenuCasing setting."
+  },
+
+  // option footer
+  "translatorCredit": {
+    "message": "Dieses Add-on wurde von $TRANSLATORS$ ins Deutsche übersetzt.",
+    "description": "The credit text for the translator. See https://github.com/TinyWebEx/common/blob/master/CONTRIBUTING.md#translator-credit-inside-of-add-on for how to translate this.",
+    "placeholders": {
+      "translators": {
+        "content": "$1",
+        "example": "<a href=\"https://github.com/rugk/\">@rugk</a>"
+      }
+    }
+  },
+  "translatorLink": {
+    "message": "https://github.com/rugk",
+    "description": "The link to the translator's GitHub profile."
+  },
+  "translatorUsername": {
+    "message": "rugk",
+    "description": "The username that the translator wants to be referred to."
+  },
+
+  "contributorsThanks": {
+    "message": "Ebenfalls vielen Dank an $CONTRIBUTORS$.",
+    "description": "Text thanking all contributors and linking to the contributors file.",
+    "placeholders": {
+      "contributors": {
+        "content": "$1",
+        "example": "<a href=\"https://github.com/rugk/…/CONTRIBUTORS.md\">all other contributors</a>"
+      }
+    }
+  },
+  "contributorsThanksLink": {
+    "message": "https://github.com/rugk/awesome-emoji-picker/blob/master/CONTRIBUTORS.md",
+    "description": "The link to the CONTRIBUTORS file."
+  },
+  "contributorsThanksLinkText": {
+    "message": "alle anderen Beitragenden",
+    "description": "The link text linking to the contributors file. See contributorsThanks."
   },
 
   // ARIA labels/descriptions
