--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -167,6 +167,14 @@
     "message": "Setze alle Einstellungen auf Standardwerte zurück",
     "description": "The button to delete all current settings and load the defaults, shown in the add-on settings."
   },
+  "optionMenuShowReadableText": {
+    "message": "Zeige eine lesbare Beschreibung der Transformation",
+    "description": "This is an option shown in the add-on settings."
+  },
+  "optionMenuShowReadableTextDescr": {
+    "message": "Zusätzlich zu den Beispieltransformationen zeigt dies auch den Namen der Transformation als Text an.",
+    "description": "This is an option shown in the add-on settings. It describes the optionMenuCasing setting."
+  },
 
   "titleUnicodeAutocorrection": {
     "message": "Unicode-Autokorrektur",
