--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -44,6 +44,21 @@
   },
 
   // context menu
+  "menuReadableTextWrapper": {
+    "message": "$READABLE_TEXT$ – $TRANSFORMED_EXAMPLE$",
+    "description": "The wrapper that is enabled if you enable the showReadableText option to also show the text without transformation",
+    "placeholders": {
+      "readable_text": {
+        "content": "$1",
+        "example": "Superscript"
+      },
+      "transformed_example": {
+        "content": "$2",
+        "example": "ˢᵘᵖᵉʳˢᶜʳⁱᵖᵗ"
+      }
+    }
+  },
+
   "menuCaseLowercase": {
     "message": "Kleinbuchstaben",
     "description": "An entry in the context menu. This is an entry for the case."
@@ -167,14 +182,6 @@
     "message": "Setze alle Einstellungen auf Standardwerte zurück",
     "description": "The button to delete all current settings and load the defaults, shown in the add-on settings."
   },
-  "optionMenuShowReadableText": {
-    "message": "Zeige eine lesbare Beschreibung der Transformation",
-    "description": "This is an option shown in the add-on settings."
-  },
-  "optionMenuShowReadableTextDescr": {
-    "message": "Zusätzlich zu den Beispieltransformationen zeigt dies auch den Namen der Transformation als Text an.",
-    "description": "This is an option shown in the add-on settings. It describes the optionMenuCasing setting."
-  },
 
   "titleUnicodeAutocorrection": {
     "message": "Unicode-Autokorrektur",
@@ -285,6 +292,14 @@
   },
   "optionMenuCasingDescr": {
     "message": "Zum Beispiel, “GROẞSCHREIBUNG”, “kleinschreibung”, “Schriebe Jedes Wort Groß” or “kEHRE gROẞSCHREIBUNG uM”.",
+    "description": "This is an option shown in the add-on settings. It describes the optionMenuCasing setting."
+  },
+  "optionMenuShowReadableText": {
+    "message": "Zeige eine lesbare Beschreibung der Transformation",
+    "description": "This is an option shown in the add-on settings."
+  },
+  "optionMenuShowReadableTextDescr": {
+    "message": "Zusätzlich zu den Beispieltransformationen zeigt dies auch den Namen der Transformation als Text an.",
     "description": "This is an option shown in the add-on settings. It describes the optionMenuCasing setting."
   },
 
