feat: add German translation for tips

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -43,6 +43,24 @@
     "description": "The message shown, when the options of the settings could not have been reset."
   },
 
+  // tips
+  "tipYouLikeAddon": {
+    "message": "Magst du dieses Add-on?",
+    "description": "A tip shown to remind the user to rate the addon."
+  },
+  "tipYouLikeAddonButton": {
+    "message": "Bewerte es!",
+    "description": "Button for the tip shown to remind the user to rate the addon."
+  },
+  "tipAwesomeIcons": {
+    "message": "Willst du auch Emoji-Autovervollstäündigung? Hier ist ein anderes Add-on dafür…",
+    "description": "A tip shown to remind the user to rate the addon."
+  },
+  "tipAwesomeIconsButton": {
+    "message": "Teste es",
+    "description": "Button for the tip shown to remind the user to rate the addon."
+  },
+
   // context menu
   "menuReadableTextWrapper": {
     "message": "$READABLE_TEXT$ – $TRANSFORMED_EXAMPLE$",
