--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -54,11 +54,11 @@
   },
   "tipAwesomeIcons": {
     "message": "Also want emoji autocompletion? We have another add-on for that…",
-    "description": "A tip shown to remind the user to rate the addon."
+    "description": "A tip shown to let the user know of another suggested addon."
   },
   "tipAwesomeIconsButton": {
     "message": "Try it",
-    "description": "Button for the tip shown to remind the user to rate the addon."
+    "description": "Button for the tip shown to let the user know of another suggested addon."
   },
   "tipTranslateAddon": {
     "message": "If you speak another language you can help translating this add-on.",
