feat: add add-on description
Also removes the now outdated translations, so they at least fall back to English until they are properly localized.

Fixes https://github.com/rugk/unicodify/issues/49

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -9,7 +9,7 @@
     "description": "Name of the extension."
   },
   "extensionDescription": {
-    "message": "Allows you to do great stuff.",
+    "message": "Erlaubt es übliche Zeichenfolgen/Texte zu automatisch zu korrigieren und Zeichenfolgen automatisch wie einen speziellen Unicode-Schriftart aussehen zu lassen.",
     "description": "Description of the extension."
   },
 
