--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -9,7 +9,7 @@
     "description": "Name of the extension."
   },
   "extensionDescription": {
-    "message": "Allows you to do great stuff.",
+    "message": "Allows you to autocorrect common text sequences and convert text characters to a look like a special Unicode font.",
     "description": "Description of the extension."
   },
 
